Fix popup positioning, marker visibility on events, long events name visibility

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
 }
 
 .hour-wrapper .current-hour-marker {
-  z-index: 1;
+  z-index: 2;
   position: absolute;
   width: 100%;
   border-top: 1px solid orangered;
@@ -58,6 +58,7 @@
 
 .hour .event-name,
 .hour .event-time {
+  height: 1rem;
   font-size: 0.7rem;
   font-weight: 300;
   color: white;
@@ -66,6 +67,8 @@
 
 .hour .event-name {
   font-weight: 400;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .outline {
